<resources>
    <string name="app_name">NiShauri</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="lab">Lab Results</string>
    <string name="appointment">Appointment</string>
    <string name="appointments">Appointments</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="phone_number">Phone Number</string>
    <string name="request_results">Request Results</string>
    <string name="login">Login</string>
    <string name="treatments">Treatments</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="new_appointment">New Appointment</string>
    <string name="depentant">Dependant(s)</string>
    <string name="new_dependant">New Dependant</string>
    <string name="terms_and_conditions">I have consented to use the app.</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_dependant">Update Dependant</string>
    <string name="settings">Settings</string>
    <string name="category_profile">Profile</string>
    <string name="about_app_category">About App</string>
    <string name="must_match">Both passwords must match</string>
    <string-array name="security_question">
        
        <item>""</item>
        <item> What is your favorite song?</item>
        <item> What was the name of your first pet?</item>
        <item> What is the name of your favourite movie?</item>
        <item> What is the name of your favourite book?</item>
        <item> What is your mother maiden name?</item>
    </string-array>
    <string-array name="language_choice">
        <item> Select your preferred language.</item>
        <item> English</item>
        <item> Kiswahili</item>
    </string-array>
    <string-array name="schedule_reason">
        
        <item>""</item>
        <item> Re-Fill</item>
        <item> Clinical Review</item>
        <item> Enhanced Adherence</item>
        <item> Lab Investigation</item>
        <item> Viral Load</item>
        <item> EID</item>
        
    </string-array>
    <string-array name="reschedule_reason">
        <item> Pick a reason here…</item>
        <item> Not available.</item>
        <item> Out of town.</item>
        <item> Other </item>
    </string-array>
    <string-array name="regimen">
        <item> Pick a regimen here…</item>
        <item> TDF+3TC+EFV </item>
        <item> TDF+3TC+NVP </item>
        <item> TDF+3TC+DTG</item>
        <item> AZT+3TC+NVP</item>
        <item> AZT+3TC+EFV| </item>
        <item> ABC+3TC+NVP</item>
        <item> ABC+3TC+EFV </item>
        <item> ABC+3TC+DTG</item>
        <item> ABC+3TC+LPV/r|</item>
        <item> AZT+3TC+LPV/r+ RTV </item>
        <item> ART5TDF+3TC +ATV/r </item>
        <item> ABC+3TC+DTG </item>
        <item> ABC+3TC+ATV/r </item>
        <item> AZT+3TC+ATV/r </item>
        <item> AZT+3TC+DRV/r </item>

    </string-array>
    <string-array name="side_effects">
        <item> Pick side effects here…</item>
        <item> Weight loss</item>
        <item> Head ache</item>
        <item> Shivers</item>
    </string-array>
    <string-array name="result">
        <item> Pick a result here…</item>
        <item> High</item>
        <item> Low</item>

    </string-array>
    <string name="dashboard">Dashboard</string>
    <string name="update_treatment">Update Treatment</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="terms_intro">
      Terms and Conditions for System Users

These Terms and Conditions ("Agreement") govern your use of this Health Information System ("System") as a healthcare provider and/or implementer. By accessing or using the System, you agree to comply with these Terms and Conditions.

Data Handling and Access

You shall handle health data in compliance with the agreed-upon data handling policies and procedures as set out by Ministry of Health Kenya and Kenya Data Protection Act 2019.

Access and use the data stored within the System solely for authorized purposes related to patient care, public health initiatives, or as permitted by applicable Kenyan laws and regulations.

Security and Confidentiality

You shall maintain the confidentiality and security of health data by adhering to the established security protocols, access controls, and encryption measures.

Prevent unauthorized access, loss, or disclosure of data and promptly report any potential breaches or security incidents to the appropriate legal channels, the System implementers.

Data Accuracy and Completeness

You are responsible for ensuring the accuracy and completeness of the health data you input or modify within the System.

Regularly review and update the data to maintain its integrity, relevance, and usefulness for healthcare provision and public good purposes.

Purpose-Limited Use

Utilize the health data stored within the System solely for the purposes specified in these Terms and Conditions, such as patient care, public health analysis, or healthcare service improvement.

Refrain from using the data for personal or unauthorized purposes that may compromise privacy or violate data protection regulations.

Training and Awareness

Stay informed and updated on the proper use and handling of health data.

Participate in training sessions or educational programs provided by the System implementors to enhance your understanding of data privacy, security practices, and compliance requirements.

Data Subject Rights

Respect the rights of individuals regarding their health data.

Promptly address any requests from patients regarding access, rectification, or erasure of their personal information as permitted by applicable data protection laws.


Reporting and Compliance

Report any concerns, breaches, or incidents related to health data handling promptly to the right legal channels and the System implementers or designated authority within your organization.

Comply with internal policies and procedures as well as applicable laws and regulations governing health data retention and protection.

Third-Party Usage

If you engage any third-party service providers who have access to the health data, ensure they comply with these Terms and Conditions and adhere to appropriate data protection and security measures.

Enter into appropriate agreements with third parties to safeguard the confidentiality and security of the data they handle.

Data from this system, will be transmitted to the National Datawarehouse for purposes of promoting continuity of healthcare services and for health implementation monitoring, reporting and research purposes. The data in the NDW will be handled in accordance with Kenyan data protection laws and other relevant regulations.

Auditing and Monitoring

Cooperate with audits, assessments, or monitoring activities conducted to ensure compliance with these Terms and Conditions.

Provide necessary information and access to systems as requested for compliance verification and data protection purposes.

Modification or Termination of Agreement

The System Implementers reserves the right to modify or terminate this Agreement at any time.

Notice of any changes will be provided in advance, and your continued use of the System following such notice constitutes acceptance of the modified Agreement.

These Terms and Conditions constitute the entire agreement between you and the System Implementer regarding your use of the System. If you do not agree with any part of these Terms and Conditions, please refrain from accessing or using the System.



By accessing or using the System, you acknowledge that you have read, understood, and agreed to these Terms and Conditions.

    </string>
    <string name="terms_account">
       You must be at least 18 years of age to use this Mobile Application. By using this Mobile Application and by agreeing to this Agreement you warrant and represent that you are at least 18 years of age. If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration.

    </string>
    <string name="terms_user_account">
       We do not own any data, information or material ("Content") that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership or right to use of all submitted Content. We may monitor and review Content in the Mobile Application submitted or created using our Services by you. You grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you. Unless specifically permitted by you, your use of the Mobile Application does not grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial, marketing or any similar purpose.

    </string>
    <string name="terms_backups">
       We perform regular backups of the Content and will do our best to ensure completeness and accuracy of these backups. In the event of the hardware failure or data loss we will restore backups automatically to minimize the impact and downtime.

    </string>
</resources>