<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <!--<item
            android:id="@+id/nav_lab"
            android:icon="@drawable/ic_lab"
            android:title="@string/lab" />-->

        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_appointment"
            android:title="@string/appointment" />

    <!--    <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/ic_treatment"
            android:visibility="gone"
            android:title="@string/treatments" />-->

       <!-- <item
            android:id="@+id/nav_dependant"
            android:icon="@drawable/ic_dependant"
            android:visibility="gone"
            android:title="@string/depentant" />-->

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="Resources" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_food"
            android:title="BMI Calculator"/>

        <item
            android:id="@+id/art"
            android:icon="@drawable/ic_art"
            android:visible="false"
            android:title="ART directory"/>

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

       <!-- <item android:title="@string/category_profile">

            <menu>

                <item
                    android:id="@+id/nav_update_profile"
                    android:icon="@drawable/ic_profile"
                    android:visibility="gone"
                    android:title="@string/update_profile" />
            </menu>

        </item>-->

        <item android:title="@string/about_app_category">

            <menu>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>

        </item>

    </group>

</menu>
